--- a/website/index.html
+++ b/website/index.html
@@ -3,20 +3,10 @@
         <!-- Metadata and whatnot -->
         <title> weBudget </title>
         <link rel="stylesheet" href="res/main.css">
+        <script src="res/scripts/navigation.js" type="text/javascript" defer></script>
     </head>
     <body>
-      <div class="nav">
-        <div class="aligned">
-          <a href="index.html">
-          <img src="res/img/webudget32x32.png" alt="weBudget"> </a>
-          <h1> <a href="index.html"> weBudget </a> </h1>
-        </div>
-        <hr>
-        <a href="about.html">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
-      </div>
+      <navigation-component></navigation-component>
       <div class="content">
         <h1> weBudget Android Application </h1>
 
