--- a/website/index.html
+++ b/website/index.html
@@ -3,15 +3,40 @@
         <!-- Metadata and whatnot -->
         <title> weBudget </title>
         <link rel="stylesheet" href="res/main.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="res/scripts/navigation.js" type="text/javascript" defer></script>
     </head>
-    <body>
-      <navigation-component></navigation-component>
-      <div class="content">
-        <h1> weBudget Android Application </h1>
+    <body style="background-color: #F8F9FA;">
 
+      <header>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg">
+            </div>
+            <div class="col-lg">
+              <nav class="navbar navbar-light bg-light">
+                <a class="navbar-brand">
+                   <img src="res/img/weBudget.png" width="120" height="120" class="d-inline-block align-center" alt="" loading="lazy">
+                   <span style="font-size: 50px;">weBudget</span>
+                </a>
+             </nav>
+            </div>
+            <div class="col-lg">
+            </div>
+          </div>
+        </div>
+      </header>
 
-
+      <div class="jumbotron" style="margin: 1.5%;">
+        <h1 class="display-4">Vision Statement</h1>
+        <p class="lead">weBudget is a collaborative budgeting system designed to streamline household payments.</p>
+        <hr class="my-4">
+        <p>If you are interested in reading our complete vision statement click below</p>
+        <a class="btn btn-primary btn-lg" href="./about.html" role="button">Learn more</a>
       </div>
+
     </body>
+    <footer>
+
+    </footer>
 </html>
