--- a/website/about.html
+++ b/website/about.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="res/scripts/navigation.js" type="text/javascript" defer></script>
     </head>
-    <body>
+    <body style="background-color: #F8F9FA;">
 
       <header>
         <div class="container">
