add comments for todo

--- a/website/index.html
+++ b/website/index.html
@@ -147,6 +147,8 @@
 
       <div class="jumbotron" style="margin: 1.5%;border-radius: 15px;">
         <h1 class="display-4">Velocity</h1>
+        <!-- image tag goes here-->
+        <!-- paragraph goes here-->
         <p class="lead">weBudget will be a collaborative budgeting system designed put the hassle of group/household related expenses a thing of the past.</p>
         <p class="lead">We saw a need for roommates and other groups of people to have a means of budgeting together and pooling funds to pay for bills from a central wallet.<br>If you are a member of a group or renting a home with roommates download our app now to save time and money!</p>
         <hr class="my-4">
