finished velocity chart and writeup

--- a/website/index.html
+++ b/website/index.html
@@ -147,11 +147,16 @@
 
       <div class="jumbotron" style="margin: 1.5%;border-radius: 15px;">
         <h1 class="display-4">Velocity</h1>
-        <!-- image tag goes here-->
-        <!-- paragraph goes here-->
-        <p class="lead">weBudget will be a collaborative budgeting system designed put the hassle of group/household related expenses a thing of the past.</p>
-        <p class="lead">We saw a need for roommates and other groups of people to have a means of budgeting together and pooling funds to pay for bills from a central wallet.<br>If you are a member of a group or renting a home with roommates download our app now to save time and money!</p>
-      </div>
+        <img src="res/img/velocity.PNG" style="display:block;margin-left: auto;margin-right: auto;">
+        <p class="lead">In our above velocity chart you can see that we have been improving with every iteration and improving how we work as a team. During our first iteration we were still figuring out how to
+          properly use design patterns and get an android application running, but managed to get our estimated and completed hours within 1 hour of eachother. During iteration 2 we took on alot more tasks than 
+          in the first iteration and since we over estimated a little bit on iteration one we tried to be more conservative with estimations. This threw our velocity off quite a bit this iteration as we did not 
+          know how much work would come with the HSQLDB implementation in our application. As a result our completed hours far outweighed the estimated hours in iteration 2, however we were happy with the amount more
+          work we got completed in iteration 2 than iteration 1. During iteration 3 we managed to get even more work done, creating a nice upward trend in the amount of work we were able to get done through the iterations. 
+          In this iteration we attempted to correct the under-estimation issue we encountered in iteration 2, causing us to make more generous estimations. This approach woorked to some degree as our estimate and completed 
+          hours are much closer, but we unfortunately went too far the other way and were unable to get even estimated and completed hours. From the trend in the chart we are getting better and better at estimating and 
+          working together as a team, given more iterations I believe we would get closer and closer to even estimated and completed hours.
+        </p>
 
     </body>
     <footer>
