--- a/website/index.html
+++ b/website/index.html
@@ -59,7 +59,7 @@
               <p style="text-align: center;">View a history of your transactions</p>
             </div>
           </div>
-          <iframe width="854" height="480" src="https://www.youtube.com/embed/lyPQqfCLNuc" style="display: block;margin-left: auto;margin-right: auto;" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="854" height="480" src="https://www.youtube.com/embed/fCzSRo1gzLI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
 
